--- a/resources/sbdc.html
+++ b/resources/sbdc.html
@@ -91,7 +91,7 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div class="col-md-3">
+        <div id="process-nav" class="col-md-3">
           <table class="table process-table">
             <tbody>
               <tr class="clickable-row" data-href="pcoc.html">
