added .title to docs; fixed some mistakes

--- a/incentives.html
+++ b/incentives.html
@@ -90,8 +90,9 @@
       </nav>
 
       <!-- Main content area -->
-      <div>
-        <h1>Incentives</h1>
+      <div class="row">
+        <div class="col-md-12">
+        <h1 class="title-1">Incentives</h1>
         <h2>Direct tariff-free access to the U.S. market</h2>
         <p>Products produced in Palau enjoy direct access to the U.S. (via Guam), under provisions of the Compact of Free Association between Palau and the United States.</p>
         <h2>Skilled Palauan Workforce Investment Act</h2>
@@ -102,7 +103,9 @@
         <p>The National Development Bank of Palau offers agricultural loans to Palauan citizens individually or as a partner in a joint venture with foreign investors. Details of the program can be found on the bank’s website at https://www.ndbp.com or by calling (680) 587-2578.</p>
         <h2>Professional Opportunities</h2>
         <p>Professionals in the fields of accountancy, architecture, engineering, law and medicine who wish to establish a business in Palau are exempt from the requirements of the Foreign Investment Act, provided standard professional certifications and/or licensing requirements are met.</p>
+        </div>
       </div>
+
       <!-- End main content area -->
 
     </div> <!-- /container -->
