--- a/infrastructure.html
+++ b/infrastructure.html
@@ -90,35 +90,43 @@
       </nav>
 
       <!-- Main content area -->
-      <div>
-        <h1>Infrastructure</h1>
-        <ul>Roman Tmetuchl International Airport
+      <div class="row">
+        <div class="col-md-12">
+        <h1 class="title-1">Infrastructure</h1>
+        <ul>
+          <h2>Roman Tmetuchl International Airport</h2>
           <li>XX international commercial flights daily.</li>
           <li>Direct flights to Guam, Seoul, Taipei and Manila, with connections worldwide.</li>
           <li>Complete, efficient freight-handling capabilities, processing XX tons of air cargo annually.</li>
         </ul>
-        <ul>Modern port facilities in Malakal
+        <ul>
+          <h2>Modern port facilities in Malakal</h2>
           <li>Xxx tons of cargo landed annually</li>
           <li>Advantageously located on all Indo-Asian shipping lanes</li>
         </ul>
-        <ul>Transportation
+        <ul>
+          <h2>Transportation</h2>
           <li>Quick and easy country-wide distribution network facilitated by:</li>
           <li>Xxx miles of highway and improved roads</li>
           <li>xx passenger and cargo ferries daily</li>
         </ul>
-        <ul>Telecommunications
+        <ul>
+          <h2>Telecommunications</h2>
           <li>New fiber-optic cable with xxxx capacity</li>
           <li>High-speed internet</li>
           <li>Internet TLD: .pw</li>
         </ul>
-        <ul>Utilities
-          <li>Electricity</li>
+        <ul>
+          <h2>Utilities</h2>
+          <li>Electricity:</li>
           <li>Modern-era electrical grid with a nationwide capacity of xxxx kW</li>
           <li>120V, 60Hz (North American plug)</li>
-          <li>Water and sanitation</li>
+          <li>Water and Sanitation:</li>
           <li>Modern water and sanitation systems, currently undergoing improvement and expansion</li>
         </ul> 
+        </div>
       </div>
+
       <!-- End main content area -->
 
     </div> <!-- /container -->
