--- a/president-message.html
+++ b/president-message.html
@@ -92,7 +92,7 @@
       <!-- Main content area -->
 <div class="row">
     <div class="col-md-12">
-    <h1>Message From The President</h1>
+    <h1 class="title-1">Message From The President</h1>
     </div>
 </div>
 <div class="row">
