--- a/process/environmental.html
+++ b/process/environmental.html
@@ -128,7 +128,7 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Environmental</h1>
+          <h1 class="title">Environmental</h1>
           <p>All businesses must comply with Palau's environmental regulations.</p>
           <h2>Requirements</h2>
           <p>You or your designated agent must:</p>
