--- a/process/immigration-labor.html
+++ b/process/immigration-labor.html
@@ -128,7 +128,7 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Immigration and Labor</h1>
+          <h1 class="title">Immigration and Labor</h1>
           <p>All businesses must comply with Palauan immigration and labor regulations.</p>
           <h2>Requirements</h2>
           <p>You or your designated agent must:</p>
