--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -128,7 +128,7 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Incorporation and Licensing</h1>
+          <h1 class="title">Incorporation and Licensing</h1>
           <h2>Requirements</h2>
           <p>You or your designated agent must:</p>
           <ol>
