--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -129,7 +129,7 @@
         </div>
 
         <div class="col-md-9">
-          <h1>Title and Cultural Affairs</h1>
+          <h1 class="title">Title and Cultural Affairs</h1>
           <p>All businesses must comply with Palauan immigration and labor regulations.</p>
           <h2>Requirements</h2>
           <p>You or your designated agent must:</p>
