--- a/process/utilities.html
+++ b/process/utilities.html
@@ -128,7 +128,7 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Utilities</h1>
+          <h1 class="title">Utilities</h1>
           <p>All businesses must comply with Palau's environmental regulations.</p>
           <h2>Requirements</h2>
           <p>After receiving a state building permit, you or your designated agent must:</p>
