--- a/resources/pcoc.html
+++ b/resources/pcoc.html
@@ -128,7 +128,7 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Palau Chamber of Commerce</h1>
+          <h1 class="title">Palau Chamber of Commerce</h1>
           <h3>Who we are</h3>
           <p>
             Established March 4, 1992, the Palau Chamber of Commerce (PCOC) is the Republic of Palau’s government recognized national private sector organization. We are a non-profit organization dedicated to advancing the interests of the private sector. We strive to be the first contact for any investors or companies looking to do business in Palau.
