--- a/resources/sbdc.html
+++ b/resources/sbdc.html
@@ -128,7 +128,7 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Small Business Development Center</h1>
+          <h1 class="title">Small Business Development Center</h1>
           <h3>Introducing Palau SBCD</h3>
           <p>
             The Palau Small Business Development Center (Palau SBDC) is a member of the University of Guam Pacific Islands Small Business Development Center Network (PISBDCN). The Palau SBDC is funded in part through a Cooperative Agreement with the U.S. Small Business Administration (SBA) and by the Palau National Government through the Ministry of Public Infrastructure, Industries, & Commerce (MPIIC).
