--- a/business-types.html
+++ b/business-types.html
@@ -92,7 +92,7 @@
       <!-- Main content area -->
 <div class="row">
     <div class="col-md-12">
-    <h1>Businesses Good For Palau</h1>
+    <h1 class="title-1">Businesses Good For Palau</h1>
     </div>
 </div>
 <div class="row">
