--- a/process/building-permit.html
+++ b/process/building-permit.html
@@ -128,7 +128,7 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Building Permit</h1>
+          <h1 class="title">Building Permit</h1>
           <p>All businesses must comply with state building and zoning regulations.</p>
           <h2>Requirements</h2>
           <p>You or your designated agent must:</p>
