--- a/resources/ndbp.html
+++ b/resources/ndbp.html
@@ -128,7 +128,7 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>
+          <h1 class="title">
             National Development Bank of Palau
           </h1>
           <p>
