--- a/process/environmental.html
+++ b/process/environmental.html
@@ -92,7 +92,7 @@
       <!-- Main content area -->
       <div class="row">
         <div class="col-md-3">
-          <table class="table process-table">
+          <table class="table process-table table-hover">
             <tbody>
               <tr class="clickable-row" data-href="incorporation-licensing.html">
                 <td>
