formats secondary nav

--- a/process-page-template.html
+++ b/process-page-template.html
@@ -88,7 +88,7 @@
       <!-- Main content area -->
       <div class="row">
         <div class="col-md-3">
-          <table class="table process-table">
+          <table class="table secondary-nav-table">
             <tbody>
               <tr>
                 <td>
