--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -91,35 +91,62 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div class="col-md-3">
-          <table class="table process-table table-hover">
+        <div id="secondary-nav-div" class="col-md-3">
+          <h3>
+            Process
+          </h3>
+          <table class="table secondary-nav-table table-hover">
             <tbody>
               <tr class="clickable-row" data-href="incorporation-licensing.html">
+                <td></td>
+                <td class="number-column">
+                  1
+                </td>
                 <td>
                   Incorporation and Licensing
                 </td>
               </tr>
               <tr class="clickable-row" data-href="immigration-labor.html">
+                <td></td>
+                <td class="number-column">
+                  2
+                </td>
                 <td>
                   Immigration and Labor
                 </td>
               </tr>
               <tr class="clickable-row" data-href="title-cultural-affairs.html">
+                <td></td>
+                <td class="number-column">
+                  3
+                </td>
                 <td>
                   Title and Cultural Affairs
                 </td>
               </tr>
               <tr class="clickable-row" data-href="environmental.html">
+                <td></td>
+                <td class="number-column">
+                  4
+                </td>
                 <td>
                   Environmental
                 </td>
               </tr>
               <tr class="clickable-row" data-href="building-permit.html">
+                <td></td>
+                <td class="number-column">
+                  5
+                </td>
                 <td>
                   Building Permit
                 </td>
               </tr>
-              <tr class="clickable-row" data-href="Utilities.html">
+              <tr class="clickable-row" data-href="utilities.html">
+                <td></td>
+                <td class="number-column">
+                  6
+                </td>
                 <td>
                   Utilities
                 </td>
