--- a/resources/legal-services.html
+++ b/resources/legal-services.html
@@ -91,8 +91,8 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div id="process-nav" class="col-md-3">
-          <table class="table process-table">
+        <div id="secondary-nav-div" class="col-md-3">
+          <table class="table secondary-nav-table">
             <tbody>
               <tr class="clickable-row" data-href="pcoc.html">
                 <td>
