--- a/resources/sbdc.html
+++ b/resources/sbdc.html
@@ -91,8 +91,8 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div class="col-md-3">
-          <table class="table process-table table-hover">
+        <div id="secondary-nav-div" class="col-md-3">
+          <table class="table secondary-nav-table table-hover">
             <tbody>
               <tr class="clickable-row" data-href="pcoc.html">
                 <td>
