secondary-nav formatting changes

--- a/incentives.html
+++ b/incentives.html
@@ -92,7 +92,7 @@
       <!-- Main content area -->
       <div class="row">
         <div class="col-md-12">
-        <h1 class="title-1">Incentives</h1>
+        <h1 class="title">Incentives</h1>
         <h2>Direct tariff-free access to the U.S. market</h2>
         <p>Products produced in Palau enjoy direct access to the U.S. (via Guam), under provisions of the Compact of Free Association between Palau and the United States.</p>
         <h2>Skilled Palauan Workforce Investment Act</h2>
