--- a/infrastructure.html
+++ b/infrastructure.html
@@ -92,7 +92,7 @@
       <!-- Main content area -->
       <div class="row">
         <div class="col-md-12">
-        <h1 class="title-1">Infrastructure</h1>
+        <h1 class="title">Infrastructure</h1>
         <ul>
           <h2>Roman Tmetuchl International Airport</h2>
           <li>XX international commercial flights daily.</li>
