--- a/process/environmental.html
+++ b/process/environmental.html
@@ -121,7 +121,7 @@
                   3
                 </td>
                 <td>
-                  Title and Cultural Affairs
+                  Clearances: Title and Cultural Affairs
                 </td>
               </tr>
               <tr class="clickable-row" data-href="#">
@@ -130,7 +130,7 @@
                   4
                 </td>
                 <td>
-                  Environmental
+                  Clearances: Environmental
                 </td>
               </tr>
               <tr class="clickable-row" data-href="building-permit.html">
@@ -154,18 +154,18 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 content">
           <h1 class="title">Environmental</h1>
-          <p>All businesses must comply with Palau's environmental regulations.</p>
-          <h2>Requirements</h2>
+          <h5>The people of Palau are commited to sustainable development with minimal environmental impact.</h5>
+          <h3>Requirements</h3>
           <p>You or your designated agent must:</p>
           <ol>
             <li>Submit an application to the Environmental Quality Preservation Board (EQPB) for an earth-moving permit. Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf">here</a>.</li>
             <li>If required by the EQPB, contracts with a local business to perform and receive an Environmental Impact Statement (EIS) (costs may vary by the scope of the project). For projects that do not require an EIA, the process for approval takes approximately 17 working days. For projects requiring an EIA or EIS, allow 45 working days.</li>
           </ol>
-          <h2>Materials</h2>
+          <h3>Materials</h3>
           <p>Donec id elit non mi porta gravida at eget metus.</p>
-          <h2>Fees</h2>
+          <h3>Fees</h3>
           <ul>
             <li>The application fee for an earthmoving permit is US $150.</li>
           </ul>
