--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -121,7 +121,7 @@
                   3
                 </td>
                 <td>
-                  Title and Cultural Affairs
+                  Clearances: Title and Cultural Affairs
                 </td>
               </tr>
               <tr class="clickable-row" data-href="environmental.html">
@@ -130,7 +130,7 @@
                   4
                 </td>
                 <td>
-                  Environmental
+                  Clearances: Environmental
                 </td>
               </tr>
               <tr class="clickable-row" data-href="building-permit.html">
@@ -154,7 +154,7 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 content">
           <h1 class="title">Foreign Investment</h1>
           <p>Palau’s Foreign Investment Act, amended 2017, seeks to encourage foreign investment in Palau’s economy within the guidelines of sustainable and environmentally responsible development.</p>
           <p>The Foreign Investment Board is charged with reviewing applications for a Foreign Investment Approval Certificate (FIAC), to ensure that investment and development are in line with the goals and priorities of the people of Palau.</p>
