--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -121,7 +121,7 @@
                   3
                 </td>
                 <td>
-                  Title and Cultural Affairs
+                  Clearances: Title and Cultural Affairs
                 </td>
               </tr>
               <tr class="clickable-row" data-href="environmental.html">
@@ -130,7 +130,7 @@
                   4
                 </td>
                 <td>
-                  Environmental
+                  Clearances: Environmental
                 </td>
               </tr>
               <tr class="clickable-row" data-href="building-permit.html">
@@ -154,7 +154,7 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 content">
           <h1 class="title">Incorporation and Licensing</h1>
           <h2>Requirements</h2>
           <p>You or your designated agent must:</p>
