--- a/process/start-business.html
+++ b/process/start-business.html
@@ -121,7 +121,7 @@
                   3
                 </td>
                 <td>
-                  Title and Cultural Affairs
+                  Clearances: Title and Cultural Affairs
                 </td>
               </tr>
               <tr class="clickable-row" data-href="environmental.html">
@@ -130,7 +130,7 @@
                   4
                 </td>
                 <td>
-                  Environmental
+                  Clearances: Environmental
                 </td>
               </tr>
               <tr class="clickable-row" data-href="building-permit.html">
@@ -155,7 +155,7 @@
           </table>
         </div>
 
-        <div class="col-md-7 col-md-offset-1">
+        <div class="col-md-9 content">
           <h1 class="title">Starting A Business</h1>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
