--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -90,7 +90,8 @@
       </nav>
 
       <!-- Main content area -->
-      <div id="secondary-nav-div" class="col-md-3">
+      <div class="row">
+        <div id="secondary-nav-div" class="col-md-3">
           <h3>
             Process
           </h3>
@@ -120,7 +121,7 @@
                   3
                 </td>
                 <td>
-                  Title and Cultural Affairs
+                  Clearances: Title and Cultural Affairs
                 </td>
               </tr>
               <tr class="clickable-row" data-href="environmental.html">
@@ -129,7 +130,7 @@
                   4
                 </td>
                 <td>
-                  Environmental
+                  Clearances: Environmental
                 </td>
               </tr>
               <tr class="clickable-row" data-href="building-permit.html">
@@ -154,7 +155,7 @@
           </table>
         </div>
 
-        <div class="col-md-9">
+        <div class="col-md-9 content">
           <h1 class="title">Title and Cultural Affairs</h1>
           <p>All businesses must comply with Palauan immigration and labor regulations.</p>
           <h2>Requirements</h2>
