--- a/resources/pcoc.html
+++ b/resources/pcoc.html
@@ -92,34 +92,37 @@
       <!-- Main content area -->
       <div class="row">
         <div id="secondary-nav-div" class="col-md-3">
+          <h3>
+            Resources
+          </h3>
           <table class="table secondary-nav-table table-hover">
             <tbody>
-              <tr class="clickable-row" data-href="pcoc.html">
+              <tr class="clickable-row" data-href="#">
+                <td></td>
                 <td>
                   Palau Chamber of Commerce
                 </td>
               </tr>
-              <tr class="clickable-row" data-href="ndbp.html">
-                <td>
-                  National Development Bank of Palau
-                </td>
-              </tr>
               <tr class="clickable-row" data-href="sbdc.html">
+                <td></td>
                 <td>
                   Small Business Development Center
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="ndbp.html">
+                <td></td>
                 <td>
-                  Another Resource
+                  National Development Bank of Palau
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="legal-services.html">
+                <td></td>
                 <td>
-                  Another Resource
+                  Legal Services
                 </td>
               </tr>
-              <tr class="all-application.html">
+              <tr class="all-applications.html">
+                <td></td>
                 <td>
                   All Applications
                 </td>
@@ -127,9 +130,10 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 content">
           <h1 class="title">Palau Chamber of Commerce</h1>
           <h3>Who we are</h3>
+          <img src="../images/pcoc.png">
           <p>
             Established March 4, 1992, the Palau Chamber of Commerce (PCOC) is the Republic of Palau’s government recognized national private sector organization. We are a non-profit organization dedicated to advancing the interests of the private sector. We strive to be the first contact for any investors or companies looking to do business in Palau.
           </p>
