--- a/resources/resources.html
+++ b/resources/resources.html
@@ -92,34 +92,37 @@
       <!-- Main content area -->
       <div class="row">
         <div id="secondary-nav-div" class="col-md-3">
+          <h3>
+            Resources
+          </h3>
           <table class="table secondary-nav-table table-hover">
             <tbody>
               <tr class="clickable-row" data-href="pcoc.html">
+                <td></td>
                 <td>
                   Palau Chamber of Commerce
                 </td>
               </tr>
-              <tr>
-                <td class="clickable-row" data-href="ndbp.html">
-                  National Development Bank of Palau
-                </td>
-              </tr>
               <tr class="clickable-row" data-href="sbdc.html">
+                <td></td>
                 <td>
                   Small Business Development Center
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="ndbp.html">
+                <td></td>
                 <td>
-                  Another Resource
+                  National Development Bank of Palau
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="legal-services.html">
+                <td></td>
                 <td>
-                  Another Resource
+                  Legal Services
                 </td>
               </tr>
               <tr class="clickable-row" data-href="all-applications.html">
+                <td></td>
                 <td>
                   All Applications
                 </td>
@@ -127,7 +130,7 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 content">
           <h1 class="title">Resources</h1>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </div>
