these changes were from before the weekend so i have no idea what they are

--- a/process/environmental.html
+++ b/process/environmental.html
@@ -91,74 +91,86 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div id="secondary-nav-div" class="col-md-3">
-          <h3>
-            Process
-          </h3>
-          <table class="table secondary-nav-table table-hover">
-            <tbody>
-              <tr class="clickable-row" data-href="incorporation-licensing.html">
-                <td></td>
-                <td class="number-column">
-                  1
-                </td>
-                <td>
-                  Incorporation and Licensing
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="immigration-labor.html">
-                <td></td>
-                <td class="number-column">
-                  2
-                </td>
-                <td>
-                  Immigration and Labor
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="title-cultural-affairs.html">
-                <td></td>
-                <td class="number-column">
-                  3
-                </td>
-                <td>
-                  Clearances: Title and Cultural Affairs
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="#">
-                <td></td>
-                <td class="number-column">
-                  4
-                </td>
-                <td>
-                  Clearances: Environmental
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="building-permit.html">
-                <td></td>
-                <td class="number-column">
-                  5
-                </td>
-                <td>
-                  Building Permit
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="utilities.html">
-                <td></td>
-                <td class="number-column">
-                  6
-                </td>
-                <td>
-                  Utilities
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col-md-3">
+          <div id="secondary-nav-div">
+            <h3>
+              Process
+            </h3>
+            <table class="table secondary-nav-table table-hover">
+              <tbody>
+                <tr class="clickable-row" data-href="incorporation-licensing.html">
+                  <td></td>
+                  <td class="number-column">
+                    1
+                  </td>
+                  <td>
+                    Incorporation and Licensing
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="immigration-labor.html">
+                  <td></td>
+                  <td class="number-column">
+                    2
+                  </td>
+                  <td>
+                    Immigration and Labor
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="title-cultural-affairs.html">
+                  <td></td>
+                  <td class="number-column">
+                    3
+                  </td>
+                  <td>
+                    Clearances: Title and Cultural Affairs
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="#">
+                  <td></td>
+                  <td class="number-column">
+                    4
+                  </td>
+                  <td>
+                    Clearances: Environmental
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="building-permit.html">
+                  <td></td>
+                  <td class="number-column">
+                    5
+                  </td>
+                  <td>
+                    Building Permit
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="utilities.html">
+                  <td></td>
+                  <td class="number-column">
+                    6
+                  </td>
+                  <td>
+                    Utilities
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="contact-info-left">
+            <h5>Environmental Quality Preservation Board</h5>
+            <span class="phone-number">+680 XXX-XXXX</span>
+          </div>
         </div>
         <div class="col-md-9 content">
-          <h1 class="title">Environmental</h1>
-          <h5>The people of Palau are commited to sustainable development with minimal environmental impact.</h5>
-          <h3>Requirements</h3>
+          <h1 class="title">Clearance: Environmental</h1>
+          <h4>The people of Palau are committed to sustainable development with minimal environmental impact.</h4>
+          <h3>Steps</h3>
           <p>You or your designated agent must:</p>
+
+          <div class="col-md-6">
+            Donec id elit non mi porta gravida at eget metus. Donec id elit non mi porta gravida at eget metus. Donec id elit non mi porta gravida at eget metus.
+          </div>
+          <br />
+
           <ol>
             <li>Submit an application to the Environmental Quality Preservation Board (EQPB) for an earth-moving permit. Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf">here</a>.</li>
             <li>If required by the EQPB, contracts with a local business to perform and receive an Environmental Impact Statement (EIS) (costs may vary by the scope of the project). For projects that do not require an EIA, the process for approval takes approximately 17 working days. For projects requiring an EIA or EIS, allow 45 working days.</li>
