--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -91,71 +91,82 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div id="secondary-nav-div" class="col-md-3">
-          <h3>
-            Process
-          </h3>
-          <table class="table secondary-nav-table table-hover">
-            <tbody>
-              <tr class="clickable-row" data-href="#">
-                <td></td>
-                <td class="number-column">
-                  1
-                </td>
-                <td>
-                  Incorporation and Licensing
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="immigration-labor.html">
-                <td></td>
-                <td class="number-column">
-                  2
-                </td>
-                <td>
-                  Immigration and Labor
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="title-cultural-affairs.html">
-                <td></td>
-                <td class="number-column">
-                  3
-                </td>
-                <td>
-                  Clearances: Title and Cultural Affairs
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="environmental.html">
-                <td></td>
-                <td class="number-column">
-                  4
-                </td>
-                <td>
-                  Clearances: Environmental
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="building-permit.html">
-                <td></td>
-                <td class="number-column">
-                  5
-                </td>
-                <td>
-                  Building Permit
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="utilities.html">
-                <td></td>
-                <td class="number-column">
-                  6
-                </td>
-                <td>
-                  Utilities
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col-md-3">
+          <div id="secondary-nav-div">
+            <h3>
+              Process
+            </h3>
+            <table class="table secondary-nav-table table-hover">
+              <tbody>
+                <tr class="clickable-row" data-href="#">
+                  <td></td>
+                  <td class="number-column">
+                    1
+                  </td>
+                  <td>
+                    Incorporation and Licensing
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="immigration-labor.html">
+                  <td></td>
+                  <td class="number-column">
+                    2
+                  </td>
+                  <td>
+                    Immigration and Labor
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="title-cultural-affairs.html">
+                  <td></td>
+                  <td class="number-column">
+                    3
+                  </td>
+                  <td>
+                    Clearances: Title and Cultural Affairs
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="environmental.html">
+                  <td></td>
+                  <td class="number-column">
+                    4
+                  </td>
+                  <td>
+                    Clearances: Environmental
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="building-permit.html">
+                  <td></td>
+                  <td class="number-column">
+                    5
+                  </td>
+                  <td>
+                    Building Permit
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="utilities.html">
+                  <td></td>
+                  <td class="number-column">
+                    6
+                  </td>
+                  <td>
+                    Utilities
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="contact-info-left">
+            <h5>Office of the Attorney General</h5>
+            <span class="phone-number">+680 XXX-XXXX</span>
+            <h5>Bureau of the Treasury</h5>
+            <span class="phone-number">+680 XXX-XXXX</span>
+            <h5>Division of Revenue and Taxation</h5>
+            <span class="phone-number">+680 488-2465</span>
+          </div>
         </div>
         <div class="col-md-9 content">
           <h1 class="title">Incorporation and Licensing</h1>
+          <h4>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</h4>
           <h2>Requirements</h2>
           <p>You or your designated agent must:</p>
           <ol>
