--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -91,73 +91,80 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div id="secondary-nav-div" class="col-md-3">
-          <h3>
-            Process
-          </h3>
-          <table class="table secondary-nav-table table-hover">
-            <tbody>
-              <tr class="clickable-row" data-href="incorporation-licensing.html">
-                <td></td>
-                <td class="number-column">
-                  1
-                </td>
-                <td>
-                  Incorporation and Licensing
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="immigration-labor.html">
-                <td></td>
-                <td class="number-column">
-                  2
-                </td>
-                <td>
-                  Immigration and Labor
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="#">
-                <td></td>
-                <td class="number-column">
-                  3
-                </td>
-                <td>
-                  Clearances: Title and Cultural Affairs
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="environmental.html">
-                <td></td>
-                <td class="number-column">
-                  4
-                </td>
-                <td>
-                  Clearances: Environmental
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="building-permit.html">
-                <td></td>
-                <td class="number-column">
-                  5
-                </td>
-                <td>
-                  Building Permit
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="utilities.html">
-                <td></td>
-                <td class="number-column">
-                  6
-                </td>
-                <td>
-                  Utilities
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col-md-3">
+          <div id="secondary-nav-div">
+            <h3>
+              Process
+            </h3>
+            <table class="table secondary-nav-table table-hover">
+              <tbody>
+                <tr class="clickable-row" data-href="incorporation-licensing.html">
+                  <td></td>
+                  <td class="number-column">
+                    1
+                  </td>
+                  <td>
+                    Incorporation and Licensing
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="immigration-labor.html">
+                  <td></td>
+                  <td class="number-column">
+                    2
+                  </td>
+                  <td>
+                    Immigration and Labor
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="#">
+                  <td></td>
+                  <td class="number-column">
+                    3
+                  </td>
+                  <td>
+                    Clearances: Title and Cultural Affairs
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="environmental.html">
+                  <td></td>
+                  <td class="number-column">
+                    4
+                  </td>
+                  <td>
+                    Clearances: Environmental
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="building-permit.html">
+                  <td></td>
+                  <td class="number-column">
+                    5
+                  </td>
+                  <td>
+                    Building Permit
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="utilities.html">
+                  <td></td>
+                  <td class="number-column">
+                    6
+                  </td>
+                  <td>
+                    Utilities
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="contact-info-left">
+            <h5>Bureau of Lands and Surveys</h5>
+            <span class="phone-number">+680 488-2332</span>
+            <h5>Ministry of Cultural Affairs</h5>
+            <span class="phone-number">+680 488-2489</span>
+          </div>
         </div>
-
         <div class="col-md-9 content">
-          <h1 class="title">Title and Cultural Affairs</h1>
-          <p>All businesses must comply with Palauan immigration and labor regulations.</p>
+          <h1 class="title">Clearance: Title and Cultural Affairs</h1>
+          <p>Business has long been a part of Palauan culture. Our modern businesses coexist with–and make use of–Palau's land and cultural traditions.</p>
           <h2>Requirements</h2>
           <p>You or your designated agent must:</p>
           <ol>
