--- a/process/start-business.html
+++ b/process/start-business.html
@@ -91,70 +91,71 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div id="secondary-nav-div" class="col-md-3">
-          <h3>
-            Process
-          </h3>
-          <table class="table secondary-nav-table table-hover">
-            <tbody>
-              <tr class="clickable-row" data-href="incorporation-licensing.html">
-                <td></td>
-                <td class="number-column">
-                  1
-                </td>
-                <td>
-                  Incorporation and Licensing
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="immigration-labor.html">
-                <td></td>
-                <td class="number-column">
-                  2
-                </td>
-                <td>
-                  Immigration and Labor
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="title-cultural-affairs.html">
-                <td></td>
-                <td class="number-column">
-                  3
-                </td>
-                <td>
-                  Clearances: Title and Cultural Affairs
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="environmental.html">
-                <td></td>
-                <td class="number-column">
-                  4
-                </td>
-                <td>
-                  Clearances: Environmental
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="building-permit.html">
-                <td></td>
-                <td class="number-column">
-                  5
-                </td>
-                <td>
-                  Building Permit
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="utilities.html">
-                <td></td>
-                <td class="number-column">
-                  6
-                </td>
-                <td>
-                  Utilities
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col-md-3">
+          <div id="secondary-nav-div">
+            <h3>
+              Process
+            </h3>
+            <table class="table secondary-nav-table table-hover">
+              <tbody>
+                <tr class="clickable-row" data-href="incorporation-licensing.html">
+                  <td></td>
+                  <td class="number-column">
+                    1
+                  </td>
+                  <td>
+                    Incorporation and Licensing
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="immigration-labor.html">
+                  <td></td>
+                  <td class="number-column">
+                    2
+                  </td>
+                  <td>
+                    Immigration and Labor
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="title-cultural-affairs.html">
+                  <td></td>
+                  <td class="number-column">
+                    3
+                  </td>
+                  <td>
+                    Clearances: Title and Cultural Affairs
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="environmental.html">
+                  <td></td>
+                  <td class="number-column">
+                    4
+                  </td>
+                  <td>
+                    Clearances: Environmental
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="building-permit.html">
+                  <td></td>
+                  <td class="number-column">
+                    5
+                  </td>
+                  <td>
+                    Building Permit
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="utilities.html">
+                  <td></td>
+                  <td class="number-column">
+                    6
+                  </td>
+                  <td>
+                    Utilities
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
-
         <div class="col-md-9 content">
           <h1 class="title">Starting A Business</h1>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
